# pocket-arcade-grabber

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: assets.rs  cores.rs  downloader.rs  files.rs  json_types.rs  main.rs
