[package]
name = "pocket-arcade-grabber"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.85"
reqwest = "0.11.12"
walkdir = "2"
